feat: Refatoração classes de orçamento